# cookiecutter-data-science

./: .gitignore  README.md
tests/: test_creation.py
{{ cookiecutter.repo_name }}/: Makefile  README.md  justfile  maskfile.md  pyproject.toml  setup.py
{{ cookiecutter.repo_name }}/notebooks/: 001_001_mjc_EDA.ipynb  1_mjc_EDA.ipynb  mjc_001_EDA.ipynb
{{ cookiecutter.repo_name }}/requirements/: doc_reqs.sh  environment.yaml  readme.md
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name.lower().replace(' ', '_') }}/: pyproject.toml
