[project]
name = "{{ cookiecutter.project_name.lower().replace(' ', '_') }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.1",
    "pandas>=2.1.1",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.1",
    "loguru>=0.7.2",
    "tqdm>=4.66.1",
    "transformers[torch]>=4.34.0",
    # "einops>=0.7.0",
    # "loguru>=0.7.2",
    # "simple-parsing>=0.1.4",
    # "torch >=2.1.0+cu124",
    # "lightning>=2.1.0",
    # "torchinfo>=1.8.0",
    # "peft>=0.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "ruff>=0.8.3",
]


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["{{ cookiecutter.project_name.lower().replace(' ', '_') }}"]